# borasem-waste

./: CODEOWNERS  LICENSE.txt  README.rst  borasem_api_class.py  pyproject.toml  setup.cfg
borasem-waste/: auth.py  waste_class.py
old/: README.md  examples.py
old/borasem-waste/: README.rst  pyproject.toml  tox.ini
old/borasem-waste/docs/source/: CHANGELOG.rst  conf.py  index.rst
old/borasem-waste/docs/source/modules/: index.rst
old/borasem-waste/src/borasem_waste/: __init__.py
src/borasem_waste/: borasem.py  wastepickup.py
