[build-system]
requires = ['setuptools', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'borasem-waste'
description = '##### ToDo: Rewrite me #####'
readme = 'README.rst'
license = {file = 'LICENSE'}
authors = [{name='Daniel Oldberg', email='daniel.oldberg@danieloldberg.se'}]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",    
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = '>=3.9'
dynamic = ['version']

[project.scripts]
#borasem-waste = 'borasem_waste.commands:main'

[tools.setuptools]
package-dir = {'' = 'src'}

[tools.setuptools.dynamic]
version = {attr = 'borasem_waste.version.version'}

[tool.setuptools_scm]
write_to = 'src/borasem_waste/version.py'
version_scheme = 'python-simplified-semver'
local_scheme = 'no-local-version'

[project.urls]
'Homepage' = 'https://pypi.org/user/danieloldberg/'

[project.optional-dependencies]
test=[
    'tox'
]
doc = ['sphinx']
